# iPSC-Conv-DGE-GEO-Depot

./: README.md
Differential-Comparison/: Compare-Conv-Expr-Diffs.GEO.sh  Compare-DGE-Expr-Diffs.GEO.sh  Compare-Expr-Diffs.GEO.sh  Compare-Molecule-Expression.R
Feature-Counts/: Convert-Conv-RNAseq-Reads.GEO.R  Convert-DGE-RNAseq-Reads.GEO.R  Count-Conv-RNAseq-Reads.GEO.sh  Count-DGE-RNAseq-Reads.GEO.sh
Sequence-Alignment/: Align-Conv-RNAseq-Reads.GEO.sh  Align-DGE-RNAseq-Reads.GEO.sh  Build-Conv-Genome-Index.GEO.sh  Build-DGE-Genome-Index.GEO.sh
UMI-Extraction/: CMakeLists.txt  README of UMI-Extraction.md
UMI-Extraction/SAM-Alignment-Counter/: CMakeLists.txt  SAM-Alignment-Counter.cpp  SAMAlignmentCounterArguments.cpp  SAMAlignmentCounterArguments.hpp
UMI-Extraction/hts/: CMakeLists.txt
UMI-Extraction/hts/include/hts/: CompositedDGEIlluminaFASTQSequence.hpp  CompositedDGEIlluminaFASTQSequenceGroups.hpp  ConvIlluminaFASTQFile.hpp  ConvIlluminaFASTQSequence.hpp  ConvIlluminaFASTQSequenceDemuxer.hpp  DGEIlluminaFASTQFile.hpp  DGEIlluminaFASTQSequence.hpp  DGEIlluminaFASTQSequenceDemuxer.hpp  FASTQFileGroupOutputStreams.hpp  FASTQFileReader.hpp  FASTQSequence.hpp  FASTQSequenceDemuxController.hpp  FASTQSequenceDemuxer.hpp  FASTQSequenceGroups.hpp  FASTQSequencePipe.hpp  IlluminaFASTQSequence.hpp  PairedConvIlluminaFASTQSequence.hpp  PairedConvIlluminaFASTQSequenceGroups.hpp  PairedDGEIlluminaFASTQSequence.hpp  PairedFASTQFileGroupOutputStreams.hpp  PairedFASTQFilePathReader.hpp  PairedFASTQSequenceCreator.hpp  PairedFASTQSequencePipe.hpp  SAMAlignmentCounter.hpp  SAMAlignmentInfoPrinter.hpp  SAMAlignmentLine.hpp  SAMAlignmentMandatoryFields.hpp  SAMAlignmentOptionalField.hpp  SAMAlignmentOptionalFields.hpp  SAMAlignmentPipe.hpp  SAMCompositedDGEIlluminaAlignmentMandatoryFields.hpp  SAMCompositedDGEIlluminaSTARFeatureCountsAlignmentLine.hpp  SAMFileReader.hpp  SAMGeneUMIAlignmentCounter.hpp  SAMHeaderCommentLine.hpp  SAMHeaderDataField.hpp  SAMHeaderDataLine.hpp  SAMHeaderLine.hpp  SAMSTARFeatureCountsAlignmentOptionalFields.hpp  WellBarcodeReader.hpp  (+1 more)
UMI-Extraction/hts/src/: CompositedDGEIlluminaFASTQSequence.cpp  ConvIlluminaFASTQSequence.cpp  DGEIlluminaFASTQSequence.cpp  FASTQFileGroupOutputStreams.cpp  FASTQSequence.cpp  IlluminaFASTQSequence.cpp  PairedFASTQFileGroupOutputStreams.cpp  PairedFASTQFilePathReader.cpp  SAMAlignmentInfoPrinter.cpp  SAMAlignmentMandatoryFields.cpp  SAMAlignmentOptionalField.cpp  SAMAlignmentOptionalFields.cpp  SAMCompositedDGEIlluminaAlignmentMandatoryFields.cpp  SAMGeneUMIAlignmentCounter.cpp  SAMHeaderCommentLine.cpp  SAMHeaderDataField.cpp  SAMHeaderDataLine.cpp  SAMHeaderLine.cpp  SAMSTARFeatureCountsAlignmentOptionalFields.cpp  WellBarcodeReader.cpp
UMI-Extraction/utk/: CMakeLists.txt
UMI-Extraction/utk/include/utk/: DSVReader.hpp  FileUtils.hpp  LineReader.hpp  LineWriter.hpp  ProgramArguments.hpp  StringUtils.hpp  SystemProperties.hpp
UMI-Extraction/utk/src/: DSVReader.cpp  FileUtils.cpp  LineReader.cpp  LineWriter.cpp  ProgramArguments.cpp  StringUtils.cpp  SystemProperties.cpp
